Modified first version

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
-Tervetuloa!
+<h1>Elokuva-arvostelu -sovellus</h1>
 <p>
-Olet sivuston {{ counter }}. käyttäjä
+<hr>
+<a href="/login">Sisäänkirjautuminen</a>
