--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,22 @@
+{% if session.username %}
 <h1>Elokuva-arvostelu -sovellus</h1>
 <p>
 <hr>
-<a href="/login">Sisäänkirjautuminen</a>
+<p>Olet kirjautunut sisään nimellä {{ session.username }}</p>
+
+<a href="/main">Siirry lukemaan ja tekemään arvosteluja</a>
+<p>
+<a href="/logout">Kirjaudu ulos</a>
+{% else %}
+<h1>Elokuva-arvostelut</h1>
+<p>
+<hr>
+<h2>Kirjaudu sisään:</h2>
+<form action="/login" method="POST">
+Käyttäjätunnus: <input type="text" name="username"> <br>
+Salasana: <input type="password" name="password"> <br>
+<p>
+<input type="submit" value="Kirjaudu sisään">
+</form>
+{% endif %}
+
