modified main.html, app.py created make_account.html and new_account.html

--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,10 @@ elokuvat tähän...
 <input type="password" name="password"></p>
 <p>
 <input type="submit" value="Kirjaudu sisään">
+<p>
 </form>
+Ei vielä tunnuksia?
+<a href="/make_account">Luo uusi tunnus</a>
 {% endif %}
 
 
