code updated - made reviews and my_reviews - suggestions dont work yet

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,8 @@
 <p>Olet kirjautunut nimellä {{ session.username }}</p>
 <a href="/logout">Kirjaudu ulos</a>
 <hr>
+<a href="/my_reviews">Omat arvostelut</a>        
+<a href="/suggest_movies">Ehdota elokuvia</a>
 <h2>Elokuvat:</h2>
 <p>
 <hr>
