--- a/templates/main.html
+++ b/templates/main.html
@@ -4,8 +4,15 @@
 <p>Olet kirjautunut nimellä {{ session.username }}</p>
 <a href="/logout">Kirjaudu ulos</a>
 <hr>
-<a href="/my_reviews">Omat arvostelut</a>        
+<a href="/my_reviews">Omat arvostelut</a>
+{% if session.user_role == False %}        
 <a href="/suggest_movies">Ehdota elokuvia</a>
+{% endif %}
+{% if session.user_role == True %}
+<a href="/add_movie">Lisää elokuva</a>
+<a href="/suggestions">Katso ehdotukset</a>
+{% endif %}
+<hr>
 <h2>Elokuvat:</h2>
 <p>
 <hr>
