code modified - categories, suggestions for admins and deleting reviews ...

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,7 @@
 <a href="/logout">Kirjaudu ulos</a>
 <hr>
 <a href="/my_reviews">Omat arvostelut</a>
+<a href="/categories">Kategoriat</a>
 {% if session.user_role == False %}        
 <a href="/suggest_movies">Ehdota elokuvia</a>
 {% endif %}
