code modified - qualifications for forms added and register remade

--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -6,7 +6,7 @@
 <a href="/logout">Kirjaudu ulos</a>
 <hr>
 <h2>Lisää uusi elokuva:</h2>
-<form action="/new_movie" method="POST">
+<form action="/add_movie" method="POST">
 <p>Elokuvan nimi:<br>
 <textarea name="name" rows="1" cols="40"></textarea>
 <p>Elokuvan julkaisuvuosi:<br>
