--- a/templates/add_movie_error.html
+++ b/templates/add_movie_error.html
@@ -2,8 +2,7 @@
 <p>
 <p>
 <hr>
-Elokuva lisätty valikoimaan!
+{{ message }}
 <p>
 <a href="/add_movie">Takaisin</a>
 <p>
-<a href="/">Etusivulle</a>
