--- a/templates/main.html
+++ b/templates/main.html
@@ -51,7 +51,7 @@ julkaistu: {{ movie[2] }}
 <p>
 </form>
 Ei vielä tunnuksia?
-<a href="/make_account">Luo uusi tunnus</a>
+<a href="/register">Luo uusi tunnus</a>
 {% endif %}
 
 
