--- a/templates/make_account.html
+++ b/templates/make_account.html
@@ -3,7 +3,7 @@
 <p>
 <hr>
 <h2>Luo uusi tunnus:</h2>
-<form action="/new_account" method="POST">
+<form action="/register" method="POST">
 <p>Käyttäjätunnus:<br>
 <input type="text" name="username"></p>
 <p>Salasana:<br>
