added option to sort movie list on the main page

--- a/templates/main.html
+++ b/templates/main.html
@@ -20,6 +20,15 @@ Haku:
 <input type="submit" value="Hae">
 </form>
 <hr>
+<form action="/" method="POST">
+Lajittele:
+<button type="submit" name="sort" value="newest" class="btn">uusin ensin</button>
+<button type="submit" name="sort" value="oldest" class="btn">vanhin ensin</button>
+<button type="submit" name="sort" value="best" class="btn">parhaiten arvioitu ensin</button>
+<button type="submit" name="sort" value="worst" class="btn">huonoiten arvioitu ensin</button>
+<button type="submit" name="sort" value="latest" class="btn">viimeisimmäksi lisätyin ensin</button>
+</form>
+<hr>
 <h2>Elokuvat:</h2>
 <p>
 <hr>
