deleting movie fromm category added. movie to category gives message if movie doens't exist but the movie already in category doesn't work yet

--- a/templates/category_page.html
+++ b/templates/category_page.html
@@ -19,7 +19,6 @@ Elokuvan nimi:
 <p>
 <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
 <input type="submit" value="Lisää elokuva kategoriaan {{ category_name }}">
-</form>
 {% endif %}
 <hr>
 <h2>Elokuvat kategoriassa {{ category_name }}:</h2>
@@ -32,7 +31,13 @@ Julkaistu: {{ movie[1] }}
 <p>
 <input type="hidden" name="movie_id" value={{movie[2]}}>
 <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
-<input type="submit" value="Poista">
+<input type="submit" value="Poista elokuva">
+</form>
+<form action="/delete_movie_from_category" method="POST">
+<input type="hidden" name="category_id" value={{id}}>
+<input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
+<input type="hidden" name="movie_id" value={{movie[2]}}>
+<input type="submit" value="Poista kategoriasta">
 </form>
 {% endif %}
 <hr>
