problems fixed and admins page made

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,6 +12,7 @@
 {% if session.user_role == True %}
 <a href="/add_movie">Lisää elokuva</a>
 <a href="/suggestions">Katso ehdotukset</a>
+<a href="/admins">Ylläpitäjät</a>
 {% endif %}
 <hr>
 <form action="/search_results" method="GET">
