--- a/templates/category_page.html
+++ b/templates/category_page.html
@@ -3,6 +3,10 @@
 <a href="/">Etusivulle</a>
 <p>
 <a href="/logout"> Kirjaudu ulos</a>
+<hr>
+<p>
+<a href= "/categories">Takaisin kategorioihin</a>
+<p>
 {% if session.user_role == True %}
 <hr>
 <p>
