--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" type= "text/css" href="../static/style.css?v=1.0.0">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="header">
             <h1>Elokuva-arvostelut</h1>
-            <li><a href="/logout">Kirjaudu ulos</a></li>
         </div>
     </body>
 </html>
