--- a/templates/add_movie_error.html
+++ b/templates/add_movie_error.html
@@ -1,8 +1,9 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
+{% extends "layout.html" %}
+{% block title %}Virhe elokuvaa lisätessä{% endblock %}
+{% block content %}
 <hr>
 {{ message }}
 <p>
 <a href="/add_movie">Takaisin</a>
 <p>
+{% endblock %}
