--- a/templates/admins_issue.html
+++ b/templates/admins_issue.html
@@ -1,7 +1,8 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
+{% extends "layout.html" %}
+{% block title %}Ylläpitäjät_virhe{% endblock %}
+{% block content %}
 <hr>
 {{ message }}
 <p>
 <a href="/admins">Takaisin</a>
+{% endblock %}
