--- a/templates/issue.html
+++ b/templates/issue.html
@@ -1,5 +1,5 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
-<hr>
+{% extends "layout.html" %}
+{% block title %}Ongelma{% endblock %}
+{% block content %}
 {{ message }}
+{% endblock %}
