--- a/templates/login_issue.html
+++ b/templates/login_issue.html
@@ -1,6 +1,6 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
+{% extends "layout.html" %}
+{% block title %}Ongelma sisäänkirjautuessa{% endblock %}
+{% block content %}
 <hr>
 <h2>Ongelma sisäänkirjautuessa:</h2>
 <p>
