--- a/templates/make_account.html
+++ b/templates/make_account.html
@@ -1,6 +1,6 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
+{% extends "layout.html" %}
+{% block title %}Rekisteröinti{% endblock %}
+{% block content %}
 <hr>
 <h2>Luo uusi tunnus:</h2>
 <form action="/register" method="POST">
@@ -12,3 +12,4 @@
 <input type="submit" value="Luo tunnus">
 <p>
 </form>
+{% endblock %}
