--- a/templates/new_suggestion.html
+++ b/templates/new_suggestion.html
@@ -1,9 +1,10 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
+{% extends "layout.html" %}
+{% block title %}Uusi ehdotus{% endblock %}
+{% block content %}
 <hr>
 Kiitos ehdotuksesta!
 <p>
 <a href="/suggest_movies">Takaisin</a>
 <p>
 <a href="/">Etusivulle</a>
+{% endblock %}
