--- a/templates/register_error.html
+++ b/templates/register_error.html
@@ -1,7 +1,8 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
+{% extends "layout.html" %}
+{% block title %}Rekisteröinti_virhe{% endblock %}
+{% block content %}
 <hr>
 {{ message }}
 <p>
 <a href="/register">Takaisin</a>
+{% endblock %}
