--- a/templates/suggestion_error.html
+++ b/templates/suggestion_error.html
@@ -1,8 +1,9 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
+{% extends "layout.html" %}
+{% block title %}Ehdotus-virhe{% endblock %}
+{% block content %}
 <hr>
 {{ message }}
 <p>
 <a href="/suggest_movies">Takaisin</a>
 <p>
+{% endblock %}
