--- a/static/style.css
+++ b/static/style.css
@@ -1,27 +1,42 @@
 body {
     margin: auto;
-    max-width: 45em;
-    font-family: 'Arial';
+    max-width: 80em;
+    font-family: 'Helvetica';
+    background: white;
+}
+nav ul{
+    padding: 0;
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 nav li{
     display: inline-block;
     background: lightsteelblue;
     border-radius: .5em;
-    margin: .2em;
+    padding: .5em 1em;
+    text-align: center;
+    margin: auto;
 }
-.header {
-    background: lightcoral;
+nav li a {
+    text-decoration: none;
+    color:white;
+}
+nav li:hover {
+    background-color: slategray;
+}
+.header{
+    background: lightslategray;
     color: white;
-    padding: 1em;
+    padding: .3em;
     font-weight: bold;
-    font-size: 1em;
     border-radius: .5em;
     margin-top: .2em;
-    margin: auto;
-    max-width: 45em;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
-.header li{
-    display: inline-block;
-    color: white;
-    font-size: .7em
+.header h1{
+    font-size: 2.3em;
+
 }
