--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -1,9 +1,6 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>Olet kirjautunut ylläpitäjänä nimellä {{ session.username }}</p>
-<p>
-<a href="/">Etusivulle</a><br>
-<a href="/logout">Kirjaudu ulos</a>
+{% extends "layout.html" %}
+{% block title %}Lisää elokuva{% endblock %}
+{% block content %}
 <hr>
 <h2>Lisää uusi elokuva:</h2>
 <form action="/add_movie" method="POST">
@@ -21,4 +18,5 @@
 <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
 <input type="submit" value="Julkaise">
 </form>
+{% endblock %}
 
