--- a/templates/category_issue.html
+++ b/templates/category_issue.html
@@ -1,7 +1,8 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
+{% extends "layout.html" %}
+{% block title %}Kategoria_virhe{% endblock %}
+{% block content %}
 <hr>
 {{ message }}
 <p>
 <a href="/category_page/{{id}}">Takaisin</a>
+{% endblock %}
