--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,8 +1,6 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<a href="/">Takaisin etusivulle</a>
-<p>
-<a href="/logout"> Kirjaudu ulos</a>
+{% extends "layout.html" %}
+{% block title %}Hakutulokset{% endblock %}
+{% block content %}
 <hr>
 <h2>Tulokset:</h2>
 <p>
@@ -13,3 +11,4 @@
 Julkaisuvuosi: {{ result[2] }}
 <hr>
 {% endfor %}
+{% endblock %}
