--- a/templates/suggestions_issue.html
+++ b/templates/suggestions_issue.html
@@ -1,7 +1,8 @@
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
+{% extends "layout.html" %}
+{% block title %}Ehdotus_virhe{% endblock %}
+{% block content %}
 <hr>
 {{ message }}
 <p>
 <a href="/suggestions">Takaisin ehdotuksiin</a>
+{% endblock %}
