--- a/templates/movie_page.html
+++ b/templates/movie_page.html
@@ -47,30 +47,34 @@ Arvio:<br>
 <input type="submit" value="Julkaise">
 </form>
 <hr>
+<p>
 {% for review in reviews %}
-<h4>Käyttäjä {{ review[0] }}  antoi elokuvalle arvosanaksi: {{ review [2] }}<br>
-Arvio:
-</h4>
-{{ review[1] }}
+<div class="listing">
+    <h4>Käyttäjä {{ review[0] }}  antoi elokuvalle arvosanaksi: {{ review [2] }}<br>
+    Arvio:
+    </h4>
+    {{ review[1] }}
+    <p>
+    {{ review[3] }}
+    <p>
+    {% if session.user_role == True %}
+    <form action="/delete_review_admin" method="POST">
+    <input type="hidden" name="review_id" value={{review[4]}}>
+    <input type="hidden" name="movie_id" value={{id}}>
+    <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
+    <input type="submit" value="Poista">
+    </form>
+    {% endif %}
+    {% if session.user_role == False and review[5] == session.user_id %}
+    <form action="/delete_review" method="POST">
+    <input type="hidden" name= "review_id" value={{review[4]}}>
+    <input type="hidden" name= "movie_id" value={{id}}>
+    <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
+    <input type= "submit" value="Poista">
+    </form>
+    {% endif %}
+    <p>
+</div>
 <p>
-{{ review[3] }}
-<p>
-{% if session.user_role == True %}
-<form action="/delete_review_admin" method="POST">
-<input type="hidden" name="review_id" value={{review[4]}}>
-<input type="hidden" name="movie_id" value={{id}}>
-<input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
-<input type="submit" value="Poista">
-</form>
-{% endif %}
-{% if session.user_role == False and review[5] == session.user_id %}
-<form action="/delete_review" method="POST">
-<input type="hidden" name= "review_id" value={{review[4]}}>
-<input type="hidden" name= "movie_id" value={{id}}>
-<input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
-<input type= "submit" value="Poista">
-</form>
-{% endif %}
-<hr>
 {% endfor %}
 {% endblock %}
