--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,9 @@
 body {
     margin: auto;
-    max-width: 80em;
+    max-width: 75em;
     font-family: 'Helvetica';
     background: white;
+    font-weight: bold;
 }
 nav ul{
     padding: 0;
@@ -21,6 +22,7 @@ nav li{
 nav li a {
     text-decoration: none;
     color:white;
+    font-size: 1.2em;
 }
 nav li:hover {
     background-color: slategray;
@@ -39,4 +41,37 @@ nav li:hover {
 .header h1{
     font-size: 2.3em;
 
+}
+.listing {
+    border-radius: .5em;
+    border-style: solid;
+    border-color: black;
+    border-width: .1em;
+    background: white;
+    color: black;
+    padding: .5em 1em;
+}
+
+
+.listing a{
+    text-decoration: none;
+    color:slategray;
+    font-size: 1.2em;
+}
+.category {
+    border-radius: .5em;
+    border-style: solid;
+    border-color: black;
+    border-width: .1em;
+    background: white;
+    color: black;
+    padding: 1.3em 1em;
+}
+
+
+.category a{
+    text-decoration: none;
+    color:slategray;
+    font-size: 1.5em;
+    font-weight: bold;
 }
