--- a/templates/main.html
+++ b/templates/main.html
@@ -37,23 +37,21 @@ Lajittele:
 <p>
 <hr>
 {% for movie in movies %}
-<h3><a href="/movie_page/{{ movie[0] }}"> {{ movie[1] }} </a></h3>
-julkaistu: {{ movie[2] }}
-{% if session.user_role == True %}
-<form action="/delete_movie" method="POST">
+<div class="listing">
+    <h3><a href="/movie_page/{{ movie[0] }}"> {{ movie[1] }} </a></h3>
+    julkaistu: {{ movie[2] }}
+    {% if session.user_role == True %}
+    <form action="/delete_movie" method="POST">
+    <p>
+    <input type="hidden" name="movie_id" value={{movie[0]}}>
+    <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
+    <input type="submit" value="Poista">
+    </form>
+    {% endif %}
+</div>
 <p>
-<input type="hidden" name="movie_id" value={{movie[0]}}>
-<input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
-<input type="submit" value="Poista">
-</form>
-{% endif %}
-<hr>
 {% endfor %}
 {% else %}
-<h1>Elokuva-arvostelut</h1>
-<p>
-<p>
-<hr>
 <h2>Kirjaudu sisään:</h2>
 <form action="/login" method="POST">
 <p>Käyttäjätunnus:<br>
